[gd_scene load_steps=3 format=3 uid="uid://bjtha7dq81a0"]

[ext_resource type="Script" path="res://network/main.gd" id="1_mcj1k"]
[ext_resource type="PackedScene" uid="uid://bmufwtv6hw8ys" path="res://TestGameplay.tscn" id="2_agxsy"]

[node name="Main" type="Node"]
script = ExtResource("1_mcj1k")
map = ExtResource("2_agxsy")

[node name="MapInstance" type="Node" parent="."]
unique_name_in_owner = true

[node name="Menu" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -69.0
offset_right = 75.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LocalButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Local"

[node name="Label2" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "--------------------------"

[node name="HostButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="To" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter server IP"

[node name="JoinButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="DisplayPublicIP" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 158.0
offset_bottom = 26.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_submitted" from="Menu/MarginContainer/VBoxContainer/To" to="." method="_on_to_text_submitted"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
